source/externs/X11/extensions/XIproto.d

module externs.X11.extensions.XIproto;
@nogc nothrow:
extern(C): __gshared:

private template HasVersion(string versionId) {
	mixin("version("~versionId~") {enum HasVersion = true;} else {enum HasVersion = false;}");
}
/************************************************************

Copyright 1989, 1998  The Open Group

Permission to use, copy, modify, distribute, and sell this software and its
documentation for any purpose is hereby granted without fee, provided that
the above copyright notice appear in all copies and that both that
copyright notice and this permission notice appear in supporting
documentation.

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE
OPEN GROUP BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN
AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

Except as contained in this notice, the name of The Open Group shall not be
used in advertising or otherwise to promote the sale, use or other dealings
in this Software without prior written authorization from The Open Group.

Copyright 1989 by Hewlett-Packard Company, Palo Alto, California.

			All Rights Reserved

Permission to use, copy, modify, and distribute this software and its
documentation for any purpose and without fee is hereby granted,
provided that the above copyright notice appear in all copies and that
both that copyright notice and this permission notice appear in
supporting documentation, and that the name of Hewlett-Packard not be
used in advertising or publicity pertaining to distribution of the
software without specific, written prior permission.

HEWLETT-PACKARD DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE, INCLUDING
ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO EVENT SHALL
HEWLETT-PACKARD BE LIABLE FOR ANY SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES OR
ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS,
WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION,
ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
SOFTWARE.

********************************************************/

 
public import externs.X11.Xproto;
public import externs.X11.X;
public import externs.X11.Xmd;


/* make sure types have right sizes for protocol structures. */
alias Window = CARD32;
alias Time = CARD32;
alias KeyCode = CARD8;
alias Mask = CARD32;
alias Atom = CARD32;
alias Cursor = CARD32;

/*********************************************************
 *
 * number of events, errors, and extension name.
 *
 */

enum MORE_EVENTS =	0x80;
enum DEVICE_BITS =	0x7F;

enum InputClassBits =	0x3F	/* bits in mode field for input classes */;
enum ModeBitsShift =	6	/* amount to shift the remaining bits   */;

enum numInputClasses = 7;

enum IEVENTS =         17       /* does NOT include generic events */;
enum IERRORS =         5;
enum IREQUESTS =       39;

enum CLIENT_REQ =      1;

struct XExtEventInfo {
    Mask mask;
    BYTE type;
    BYTE word;
    }

version (_XITYPEDEF_POINTER) {} else {
alias Pointer = void*;
}

struct tmask
    {
    Mask mask;
    void* dev;
    }

/*********************************************************
 *
 * Event constants used by library.
 *
 */

enum XI_DeviceValuator =		0;
enum XI_DeviceKeyPress =		1;
enum XI_DeviceKeyRelease =		2;
enum XI_DeviceButtonPress =		3;
enum XI_DeviceButtonRelease =		4;
enum XI_DeviceMotionNotify =		5;
enum XI_DeviceFocusIn =		6;
enum XI_DeviceFocusOut =		7;
enum XI_ProximityIn =			8;
enum XI_ProximityOut =			9;
enum XI_DeviceStateNotify =		10;
enum XI_DeviceMappingNotify =		11;
enum XI_ChangeDeviceNotify =		12;
enum XI_DeviceKeystateNotify =		13;
enum XI_DeviceButtonstateNotify =	14;
enum XI_DevicePresenceNotify =		15;
enum XI_DevicePropertyNotify =         16;

/*********************************************************
 *
 * Protocol request constants
 *
 */

enum X_GetExtensionVersion =		1;
enum X_ListInputDevices =		2;
enum X_OpenDevice =			3;
enum X_CloseDevice =			4;
enum X_SetDeviceMode =			5;
enum X_SelectExtensionEvent =		6;
enum X_GetSelectedExtensionEvents =	7;
enum X_ChangeDeviceDontPropagateList = 8;
enum X_GetDeviceDontPropagateList =	9;
enum X_GetDeviceMotionEvents =		10;
enum X_ChangeKeyboardDevice =		11;
enum X_ChangePointerDevice =		12;
enum X_GrabDevice =			13;
enum X_UngrabDevice =			14;
enum X_GrabDeviceKey =			15;
enum X_UngrabDeviceKey =		16;
enum X_GrabDeviceButton =		17;
enum X_UngrabDeviceButton =		18;
enum X_AllowDeviceEvents =		19;
enum X_GetDeviceFocus =		20;
enum X_SetDeviceFocus =		21;
enum X_GetFeedbackControl =		22;
enum X_ChangeFeedbackControl =		23;
enum X_GetDeviceKeyMapping =		24;
enum X_ChangeDeviceKeyMapping =	25;
enum X_GetDeviceModifierMapping =	26;
enum X_SetDeviceModifierMapping =	27;
enum X_GetDeviceButtonMapping =	28;
enum X_SetDeviceButtonMapping =	29;
enum X_QueryDeviceState =		30;
enum X_SendExtensionEvent =		31;
enum X_DeviceBell =			32;
enum X_SetDeviceValuators =		33;
enum X_GetDeviceControl =		34;
enum X_ChangeDeviceControl =		35;
/* XI 1.5 */
enum X_ListDeviceProperties =          36;
enum X_ChangeDeviceProperty =          37;
enum X_DeleteDeviceProperty =          38;
enum X_GetDeviceProperty =             39;

/*********************************************************
 *
 * Protocol request and reply structures.
 *
 * GetExtensionVersion.
 *
 */

struct xGetExtensionVersionReq {
    CARD8 reqType;       /* input extension major code   */
    CARD8 ReqType;       /* always X_GetExtensionVersion */
    CARD16 length;
    CARD16 nbytes;
    CARD8 pad1, pad2;
}

struct xGetExtensionVersionReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_GetExtensionVersion */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD16 major_version;
    CARD16 minor_version;
    BOOL present;
    CARD8 pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
}

/*********************************************************
 *
 * ListInputDevices.
 *
 */

struct xListInputDevicesReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;	/* always X_ListInputDevices	*/
    CARD16 length;
}

struct xListInputDevicesReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* always X_ListInputDevices	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 ndevices;
    CARD8 pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

alias xDeviceInfoPtr = _xDeviceInfo*;
alias xDeviceInfo = _xDeviceInfo;


alias xAnyClassPtr = _xAnyClassInfo*;

struct _xAnyClassInfo {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    }

struct _xDeviceInfo {
    CARD32 type;
    CARD8 id;
    CARD8 num_classes;
    CARD8 use;      /* IsXPointer | IsXKeyboard | IsXExtension... */
    CARD8 attached; /* id of master dev (if IsXExtension..) */
    }

alias xKeyInfo = _xKeyInfo;
alias xKeyInfoPtr = _xKeyInfo*;


struct _xKeyInfo {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    KeyCode min_keycode;
    KeyCode max_keycode;
    CARD16 num_keys;
    CARD8 pad1, pad2;
    }

alias xButtonInfoPtr = _xButtonInfo*;
alias xButtonInfo = _xButtonInfo;


struct _xButtonInfo {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    CARD16 num_buttons;
    }

alias xValuatorInfoPtr = _xValuatorInfo*;
alias xValuatorInfo = _xValuatorInfo;


struct _xValuatorInfo {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    CARD8 num_axes;
    CARD8 mode;
    CARD32 motion_buffer_size;
    }

alias xAxisInfoPtr = _xAxisInfo*;
alias xAxisInfo = _xAxisInfo;


struct _xAxisInfo {
    CARD32 resolution;
    CARD32 min_value;
    CARD32 max_value;
    }

/*********************************************************
 *
 * OpenDevice.
 *
 */

struct xOpenDeviceReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_OpenDevice		*/
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xOpenDeviceReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_OpenDevice		*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 num_classes;
    BYTE pad1, pad2, pad3;
    CARD32 pad00;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    }

struct xInputClassInfo {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 event_type_base;
    }

/*********************************************************
 *
 * CloseDevice.
 *
 */

struct xCloseDeviceReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_CloseDevice	*/
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

/*********************************************************
 *
 * SetDeviceMode.
 *
 */

struct xSetDeviceModeReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;	/* always X_SetDeviceMode	*/
    CARD16 length;
    CARD8 deviceid;
    CARD8 mode;
    BYTE pad1, pad2;
}

struct xSetDeviceModeReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_SetDeviceMode	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

/*********************************************************
 *
 * SelectExtensionEvent.
 *
 */

struct xSelectExtensionEventReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_SelectExtensionEvent */
    CARD16 length;
    Window window;
    CARD16 count;
    CARD16 pad00;
}

/*********************************************************
 *
 * GetSelectedExtensionEvent.
 *
 */

struct xGetSelectedExtensionEventsReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_GetSelectedExtensionEvents */
    CARD16 length;
    Window window;
}

struct xGetSelectedExtensionEventsReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* GetSelectedExtensionEvents	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD16 this_client_count;
    CARD16 all_clients_count;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

/*********************************************************
 *
 * ChangeDeviceDontPropagateList.
 *
 */

struct xChangeDeviceDontPropagateListReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_ChangeDeviceDontPropagateList */
    CARD16 length;
    Window window;
    CARD16 count;
    CARD8 mode;
    BYTE pad;
}

/*********************************************************
 *
 * GetDeviceDontPropagateList.
 *
 */

struct xGetDeviceDontPropagateListReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_GetDeviceDontPropagateList */
    CARD16 length;
    Window window;
}

struct xGetDeviceDontPropagateListReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* GetDeviceDontPropagateList   */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD16 count;
    CARD16 pad00;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
    }

/*********************************************************
 *
 * GetDeviceMotionEvents.
 *
 */
